k3s/apps/navidrome/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4533
  selector:
    app: navidrome
