k3s/apps/navidrome/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
    argocd.argoproj.io/sync-wave: '4'
spec:
  tls:
    - hosts:
        - '*.local.lttviet.com'
      secretName: lttviet.com
  rules:
    - host: audio.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 80
